[package]
name = "mycrate"
version = "0.1.0"
authors = ["Faisal Shahzad <faisal.rwp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

repository = "https://github.com/faisalrwp/myClass/firstwelcome"
homepage = "https://github.com/imran82ali/firstwelcome"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "First Welcome Library "
[dependencies]
